crates/cli/tests/snapshots/lib__check@unknown_var.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_var.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_var.nemo
---
success: false
exit_code: 1
----- stdout -----
[05] Error: Unknown variable unknown
   ╭─[ tests/check/unknown_var.nemo:2:3 ]
   │
 2 │   unknown;
   │   ───┬───  
   │      ╰───── Unknown variable unknown
───╯

[05] Error: Unknown variable unknown
   ╭─[ tests/check/unknown_var.nemo:4:7 ]
   │
 4 │   set unknown = 3;
   │       ───┬───  
   │          ╰───── Unknown variable unknown
───╯

[05] Error: Unknown variable unknown
   ╭─[ tests/check/unknown_var.nemo:5:7 ]
   │
 5 │   set unknown.x = 3
   │       ───┬───  
   │          ╰───── Unknown variable unknown
───╯


----- stderr -----
Error: "Check failed with 3 errors"
